fix: repair broken placement and z-index interpretation, update docs

--- a/index.css
+++ b/index.css
@@ -29,6 +29,7 @@ a:hover {
   margin: 2em 40%;
   overflow: visible;
   padding: 1em;
+  position: relative;
   z-index: 5;
 }
 
